# llama2-rs

./: .gitignore  Cargo.toml  Makefile  README.md  README.md.tpl  diagram.mermaid  diagram_highlevel.mermaid  gen_readme.py  llama.excalidraw  marimo_positional_encodings.py  notes.txt  todo.md
examples/: add.metal  convert_f16.metal  metal.rs  metal_add.rs  metal_matmul.rs  rayon.rs  simd.rs
src/: convert_f16.metal  lib.rs  log.rs  logging.rs  main.rs  matmul.rs  metal.rs  rayon_bench.rs  sliceutil.rs
