[package]
name = "llama2-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
memmap2 = "0.9.7"
rayon = "1.11.0"

[features]
default = ["log-info"]
log-info = []
log-debug = ["log-info"]
log-trace = ["log-debug"]
debug-encoder = ["log-debug"]

# [profile.dev]
# features = ["debug"]
# 
# [profile.release]
# features = []
