[package]
name = "llama2-rs"
version = "0.1.0"
edition = "2024"
# default-run = "llama2-rs"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
memmap2 = "0.9.7"
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
objc2-metal = "0.3.2"
objc2-metal-performance-shaders = "0.3.2"
rayon = "1.11.0"

[features]
default = ["log-info"]
log-info = []
log-debug = ["log-info"]
log-trace = ["log-debug"]
debug-encoder = ["log-debug"]

# [profile.dev]
# features = ["debug"]

[profile.release]
debug = true  # leave symbols for Instruments
# features = []

[[bin]]
name = "llama2-rs"
path = "src/main.rs"

[lib]
name = "llama2_rs"
path = "src/lib.rs"
